monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/SubGrammarWithSymbol.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

grammar SubGrammarWithSymbol extends de.monticore.common.TestTypes{

  symbol SubSymbol = Name "sub";

  SubNonTer = Name "NonTer";

  scope SubScope = Name;
}
