monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4102/A4102g.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4102;

grammar A4102g extends de.monticore.common.TestTypes {

  symbol A = "a" Name;

  symbolrule A =
    b:Set<Optional<String>>;

}